# ironbar

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.rs  default.nix  flake.nix  ironbar.service  shell.nix
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  other.md
.github/scripts/: sync-wiki.sh  ubuntu_setup.sh
.github/workflows/: binary.yml  build.yml  deploy.yml  docker.yml  pr-review.yml  pr-update.yml  release.yml  schema.yml  update-nix-flake-lock.yml  wiki.yml
docs/: Compiling.md  Configuration guide.md  Controlling Ironbar.md  Development guide.md  Dynamic values.md  GTK4.md  Home.md  IPC.md  Ironvars.md  Profiles.md  Scripts.md  Styling guide.md  Sys-Info.md  _Sidebar.md
docs/dynamic content/: Controlling Ironbar.md  Dynamic values.md  IPC.md  Ironvars.md  Scripts.md
docs/examples/: Config.md  Stylesheet.md
docs/examples/custom/: Cpu-Cores-Graph.md  Power-Menu.md  Weather.md
docs/guides/: Compiling.md  Configuration guide.md  Development guide.md  GTK4.md  Images.md  Profiles.md  Styling guide.md
docs/modules/: Battery.md  Bindmode.md  Bluetooth.md  Brightness.md  Cairo.md  Clipboard.md  Clock.md  Custom.md  Focused.md  Inhibit.md  Keyboard.md  Keys.md  Label.md  Launcher.md  MPD.md  Menu.md  Music.md  Network-Manager.md  Networkmanager.md  Notifications.md  Script.md  Sway-mode.md  Sys-Info.md  Tray.md  Upower.md  Volume.md  Workspaces.md
docs/modules/custom/: Cairo.md  Custom.md  Label.md  Script.md
docs/modules/custom/widgets/: Box.md  Button.md  Image.md  Label.md  Progress.md  Slider.md
examples/: config.corn  config.json  config.toml  config.yaml  custom.corn  style.css  sys-info.corn  test.corn
examples/desktop/: README.md  config.corn  config.json  config.toml  config.yaml  style.css
examples/menu/: default.corn  default.json  default.toml  default.yml
examples/minimal/: README.md  config.corn  config.json  config.toml  config.yaml  style.css
lua/: draw.lua  init.lua
nix/: default.nix  devshell.nix  module.nix  package.nix
scripts/: generate-examples.sh  migrate-styles.sh
src/: bar.rs  bridge_channel.rs  broadcaster.rs  channels.rs  cli.rs  collection.rs  config.rs  desktop_file.rs  dynamic_string.rs  error.rs  global_state.rs  gtk_helpers.rs  icon.rs  image.rs  ironvar.rs  logging.rs  macros.rs  main.rs  outputs.rs  popup.rs  script.rs  style.rs  unique_id.rs  wayland.rs
src/clients/: bluetooth.rs  clipboard.rs  inhibit.rs  libinput.rs  lua.rs  mod.rs  networkmanager.rs  niri.rs  outputs.rs  sway.rs  sysinfo.rs  system_tray.rs  tray.rs  upower.rs
src/clients/backlight/: mod.rs
src/clients/brightness/: dbus_keyboard.rs  dbus_login1.rs  fs_brightness.rs  fs_reader.rs  ipc.rs  ironvar.rs  mod.rs
src/clients/compositor/: hyprland.rs  mod.rs  niri.rs  sway.rs
src/clients/compositor/niri/: connection.rs  mod.rs
src/clients/gtk_wayland/: idle_inhibit.rs  mod.rs
src/clients/music/: mod.rs  mpd.rs  mpris.rs
src/clients/networkmanager/: dbus.rs  event.rs  mod.rs  state.rs
src/clients/swaync/: dbus.rs  mod.rs
src/clients/upower/: client.rs  dbus.rs  device.rs  mod.rs  test_client.rs  upower.rs
src/clients/volume/: mod.rs  sink.rs  sink_input.rs  source.rs  source_output.rs
src/clients/wayland/: client.rs  dmabuf.rs  macros.rs  mod.rs  toplevel.rs  toplevel_manager.rs  wl_output.rs  wl_seat.rs
src/clients/wayland/ext_image_copy_capture/: mod.rs
src/clients/wayland/ext_workspace/: group_handle.rs  handle.rs  manager.rs  mod.rs
src/clients/wayland/hyprland_toplevel_export/: frame.rs  manager.rs  mod.rs
src/clients/wayland/wl_output/: list.rs
src/clients/wayland/wlr_data_control/: device.rs  manager.rs  mod.rs  offer.rs  source.rs
src/clients/wayland/wlr_foreign_toplevel/: handle.rs  manager.rs  mod.rs
src/config/: common.rs  default.rs  diff.rs  hot_reload.rs  impl.rs  layout.rs  marquee.rs  mod.rs  profiles.rs  sources.rs  thresholds.rs  truncate.rs
src/dynamic_value/: dynamic_bool.rs  dynamic_string.rs  mod.rs
src/image/: gtk.rs  mod.rs  provider.rs
src/ipc/: client.rs  commands.rs  mod.rs  responses.rs  server.rs
src/ipc/server/: bar.rs  ironvar.rs  mod.rs  style.rs
src/modules/: backlight.rs  battery.rs  bindmode.rs  bluetooth.rs  brightness.rs  cairo.rs  clipboard.rs  clock.rs  custom.rs  focused.rs  keyboard.rs  keys.rs  label.rs  menu.rs  mod.rs  mpd.rs  music.rs  networkmanager.rs  notifications.rs  script.rs  sysinfo.rs  tray.rs  upower.rs  volume.rs  workspaces.rs
src/modules/bluetooth/: config.rs  mod.rs
src/modules/clock/: mod.rs  popup.rs
src/modules/custom/: box.rs  button.rs  image.rs  label.rs  mod.rs  progress.rs  slider.rs
src/modules/inhibit/: config.rs  mod.rs  systemd.rs  wayland.rs
src/modules/launcher/: icon.rs  item.rs  mod.rs  node.rs  open_state.rs  pagination.rs  popup.rs
src/modules/menu/: config.rs  mod.rs  ui.rs
src/modules/mpd/: client.rs  mod.rs  popup.rs
src/modules/music/: config.rs  mod.rs
src/modules/networkmanager/: config.rs
src/modules/sway/: mode.rs
src/modules/sysinfo/: mod.rs  parser.rs  renderer.rs  token.rs
src/modules/tray/: diff.rs  icon.rs  interface.rs  mod.rs
src/modules/volume/: config.rs  mod.rs
src/modules/workspaces/: button.rs  button_map.rs  mod.rs  open_state.rs
src/sway/: mod.rs  node.rs
src/wayland/: client.rs  mod.rs  toplevel.rs  toplevel_manager.rs
src/widgets/: dynamic_label.rs  mod.rs
test-configs/: battery.corn  bluetooth.corn  custom-scroll.corn  gtk4.corn  menu.corn  network-manager.corn  orientation.corn  orientation.yaml  workspaces.corn
test-configs/applications/: Factorio.desktop
