[package]
name = "ironbar"
version = "0.16.1"
edition = "2024"
license = "MIT"
description = "Customisable GTK Layer Shell wlroots/sway bar"
repository = "https://github.com/jakestanger/ironbar"
categories = ["gui"]
keywords = ["gtk", "bar", "wayland", "wlroots", "gtk-layer-shell"]

[features]
default = [
    "battery",
    "bindmode+all",
    "bluetooth",
    "cli",
    "cairo",
    "clipboard",
    "clock",
    "config+all",
    "custom",
    "focused",
    "http",
    "ipc",
    "keyboard+all",
    "launcher",
    "label",
    "menu",
    "music+all",
    "network_manager",
    "notifications",
    "script",
    "sys_info",
    "tray",
    "volume",
    "workspaces+all",
]

# -- core features --

cli = ["ipc"]
ipc = ["dep:serde_json", "dep:clap"]

http = ["dep:reqwest"]

"config+all" = [
    "config+json",
    "config+yaml",
    "config+toml",
    "config+corn",
    "config+ron",
]
"config+json" = ["universal-config/json"]
"config+yaml" = ["universal-config/yaml"]
"config+toml" = ["universal-config/toml"]
"config+corn" = ["universal-config/corn"]
"config+ron" = ["universal-config/ron"]

# -- module features --

battery = ["zbus", "futures-lite"]

bindmode = []
"bindmode+all" = ["bindmode+sway", "bindmode+hyprland"]
"bindmode+sway" = ["bindmode", "sway"]
"bindmode+hyprland" = ["bindmode", "hyprland"]

bluetooth = ["dep:bluer"]

cairo = ["lua-src", "mlua", "cairo-rs"]

clipboard = ["dep:rustix"]

clock = ["chrono"]

custom = []

focused = []

keyboard = ["dep:colpetto", "dep:evdev-rs", "dep:rustix", "futures-lite"]
"keyboard+all" = ["keyboard", "keyboard+sway", "keyboard+hyprland"]
"keyboard+sway" = ["keyboard", "sway"]
"keyboard+hyprland" = ["keyboard", "hyprland"]

label = []

launcher = []

menu = []

music = ["dep:regex"]
"music+all" = ["music", "music+mpris", "music+mpd"]
"music+mpris" = ["music", "mpris"]
"music+mpd" = ["music", "mpd-utils"]

network_manager = ["futures-lite", "futures-signals", "zbus"]

notifications = ["zbus"]

script = []

sys_info = ["dep:sysinfo"]

tray = ["system-tray"]

volume = ["libpulse-binding"]

workspaces = ["futures-lite"]
"workspaces+all" = ["workspaces", "workspaces+sway", "workspaces+hyprland", "workspaces+niri"]
"workspaces+sway" = ["workspaces", "sway"]
"workspaces+hyprland" = ["workspaces", "hyprland"]
"workspaces+niri" = ["workspaces", "niri"]

sway = ["swayipc-async", "futures-lite"]

niri = ["dep:serde_json"]

schema = ["dep:schemars"]

[dependencies]
# core
gtk = "0.18.2"
gtk-layer-shell = "0.8.2"
glib = "0.18.5"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "sync",
    "io-util",
    "net",
    "fs"
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-error = { version = "0.2.1", default-features = false }
tracing-appender = "0.2.3"
strip-ansi-escapes = "0.2.0"
color-eyre = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
indexmap = { version = "2.11.0", features = ["serde"] }
dirs = "6.0.0"
walkdir = "2.5.0"
notify = { version = "8.2.0", default-features = false }
wayland-client = "0.31.1"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
smithay-client-toolkit = { version = "0.19.2", default-features = false, features = [
    "calloop",
] }
universal-config = { version = "0.5.1", default-features = false }
ctrlc = "3.4.7"
cfg-if = "1.0.1"

# bluetooth
bluer = { version = "0.17.4", optional = true, features = ["bluetoothd"] }

# cli
clap = { version = "4.5.42", optional = true, features = ["derive"] }

# http
reqwest = { version = "0.12.23", default-features = false, features = ["default-tls", "http2"], optional = true }

# cairo
lua-src = { version = "548.1.1", optional = true }
mlua = { version = "0.11.2", optional = true, features = ["luajit", "send"] }
cairo-rs = { version = "0.18.5", optional = true, features = ["png"] }

# clock
chrono = { version = "0.4.41", optional = true, default-features = false, features = ["clock", "unstable-locales"] }

# keyboard
colpetto = { version = "0.6.0", features = ["tokio", "tracing"], optional = true }
evdev-rs = { version = "0.6.2", optional = true }

# music
mpd-utils = { version = "0.2.1", optional = true }
mpris = { version = "2.0.1", optional = true }
regex = { version = "1.11.2", default-features = false, features = [
    "std",
], optional = true }

# network_manager
futures-signals = { version = "0.3.34", optional = true }

# sys_info
sysinfo = { version = "0.37.0", optional = true }

# tray
system-tray = { version = "0.8.1", features = ["dbusmenu-gtk3"], optional = true }

# volume
libpulse-binding = { version = "2.30.1", optional = true }

# shared
futures-lite = { version = "2.6.1", optional = true } # battery, network_manager, workspaces, keyboard
zbus = { version = "5.10.0", default-features = false, features = ["tokio"], optional = true } # battery, network_manager, notifications
swayipc-async = { version = "2.1.0", optional = true } # workspaces, keyboard
hyprland = { version = "0.4.0-beta.2", optional = true } # workspaces, keyboard
rustix = { version = "1.0.8", default-features = false, features = ["std", "fs", "pipe", "event"], optional = true } # clipboard, input
serde_json = { version = "1.0.143", optional = true } # ipc, niri

# schema

schemars = { version = "1.0.4", optional = true, features = ["indexmap2"] }

[build-dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"