[package]
name = "ironbar"
version = "0.19.0-pre"
edition = "2024"
license = "MIT"
description = "Customisable GTK Layer Shell wlroots/sway bar"
repository = "https://github.com/jakestanger/ironbar"
categories = ["gui"]
keywords = ["gtk", "bar", "wayland", "wlroots", "gtk-layer-shell"]

[features]
default = [
    "battery",
    "bindmode+all",
    "bluetooth",
    "cli",
    "cairo",
    "clipboard",
    "clock",
    "config+all",
    "custom",
    "focused",
    "http",
    "inhibit",
    "ipc",
    "keyboard+all",
    "launcher",
    "label",
    "menu",
    "music+all",
    "network_manager",
    "notifications",
    "script",
    "sys_info",
    "tray",
    "volume",
    "workspaces+all",
    "extras"
]

# -- core features --

cli = ["ipc"]
ipc = ["dep:serde_json", "dep:clap"]

http = ["dep:reqwest"]

config = []
"config+all" = [
    "config+json",
    "config+yaml",
    "config+toml",
    "config+corn"
]
"config+json" = ["config", "config/json"]
"config+yaml" = ["config", "config/yaml"]
"config+toml" = ["config", "config/toml"]
"config+corn" = ["config", "config/corn"]

# -- module features --

battery = ["zbus", "futures-lite"]

bindmode = []
"bindmode+all" = ["bindmode+sway", "bindmode+hyprland"]
"bindmode+sway" = ["bindmode", "sway"]
"bindmode+hyprland" = ["bindmode", "hyprland"]

bluetooth = ["dep:bluer"]

cairo = ["lua-src", "mlua"]

clipboard = ["dep:rustix"]

clock = ["chrono"]

custom = []

focused = []

inhibit = ["chrono"]

keyboard = ["dep:colpetto", "dep:evdev-rs", "dep:rustix", "futures-lite"]
"keyboard+all" = ["keyboard", "keyboard+sway", "keyboard+hyprland"]
"keyboard+sway" = ["keyboard", "sway"]
"keyboard+hyprland" = ["keyboard", "hyprland"]

label = []

launcher = []

menu = []

music = []
"music+all" = ["music", "music+mpris", "music+mpd"]
"music+mpris" = ["music", "mpris"]
"music+mpd" = ["music", "mpd-utils"]

network_manager = ["futures-lite", "futures-signals", "zbus"]

notifications = ["zbus"]

script = []

sys_info = ["dep:sysinfo"]

tray = ["system-tray"]

volume = ["libpulse-binding"]

workspaces = ["futures-lite"]
"workspaces+all" = ["workspaces", "workspaces+sway", "workspaces+hyprland", "workspaces+niri"]
"workspaces+sway" = ["workspaces", "sway"]
"workspaces+hyprland" = ["workspaces", "hyprland"]
"workspaces+niri" = ["workspaces", "niri"]

sway = ["swayipc-async", "futures-lite"]

niri = ["dep:serde_json"]

extras = ["dep:schemars", "dep:clap_complete"]

[dependencies]
# core
gtk = { package = "gtk4", version = "0.10.0", features = ["v4_12"] }
gtk-layer-shell = { package = "gtk4-layer-shell", version = "0.6.3" }
glib = "0.21.1"
tokio = { version = "1.48.0", features = [
    "macros",
    "rt-multi-thread",
    "time",
    "process",
    "sync",
    "io-util",
    "net",
    "fs"
] }
tracing = "0.1.44"
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] } # pinned: https://github.com/tokio-rs/tracing/issues/3378
tracing-error = { version = "0.2.1", default-features = false }
tracing-appender = "0.2.4"
strip-ansi-escapes = "0.2.0"
thiserror = "2.0.17"
color-eyre = "0.6.5"
serde = { version = "1.0.228", features = ["derive"] }
indexmap = { version = "2.12.1", features = ["serde"] }
dirs = "6.0.0"
walkdir = "2.5.0"
notify = { version = "8.2.0", default-features = false }
wayland-client = "0.31.1"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
smithay-client-toolkit = { version = "0.20.0", default-features = false, features = [
    "calloop",
] }
config = { version = "0.15.19", default-features = false }
ctrlc = "3.5.1"
cfg-if = "1.0.4"

# bluetooth
bluer = { version = "0.17.4", optional = true, features = ["bluetoothd"] }

# cli
clap = { version = "4.5.53", optional = true, features = ["derive", "env"] }

# http
reqwest = { version = "0.12.28", default-features = false, features = ["default-tls", "http2"], optional = true }

# cairo
lua-src = { version = "548.1.2", optional = true }
mlua = { version = "0.11.5", optional = true, features = ["luajit", "send"] }

# keyboard
colpetto = { version = "0.7.0", features = ["tokio", "tracing"], optional = true }
evdev-rs = { version = "0.6.3", optional = true }

# music
mpd-utils = { version = "0.2.1", optional = true }
mpris = { version = "2.0.1", optional = true }

# network_manager
futures-signals = { version = "0.3.34", optional = true }

# sys_info
sysinfo = { version = "0.37.2", optional = true }

# tray
system-tray = { version = "0.8.5", optional = true }

# volume
libpulse-binding = { version = "2.30.1", optional = true }

# shared
futures-lite = { version = "2.6.1", optional = true } # battery, network_manager, workspaces, keyboard
zbus = { version = "5.12.0", default-features = false, features = ["tokio"], optional = true } # battery, network_manager, notifications
swayipc-async = { version = "3.0.0", optional = true } # workspaces, keyboard
chrono = { version = "0.4.42", optional = true, default-features = false, features = ["clock", "unstable-locales"] } # clock, inhibit
hyprland = { version = "0.4.0-beta.3", optional = true } # workspaces, keyboard
rustix = { version = "1.1.3", default-features = false, features = ["std", "fs", "pipe", "event"], optional = true } # clipboard, input
serde_json = { version = "1.0.148", optional = true } # ipc, niri

# extras
schemars = { version = "1.2.0", optional = true, features = ["indexmap2"] }
clap_complete = {  version = "4.5.64", optional = true }